--- a/src/app/index.html
+++ b/src/app/index.html
@@ -11,6 +11,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <dg-root></dg-root>
+  <app-root></app-root>
 </body>
 </html>
