--- a/src/app/index.html
+++ b/src/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Kingdom Game</title>
+  <title>Base Angular Lib</title>
   <base href="./">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
